--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.3.90 (unreleased) [experimental]
 
+** tests/crypto: Also test newly added SHA-1 interfaces.
+
 * Version 1.3 (released 2009-10-08)
 
 ** Experimental support for SCRAM-SHA-1 added.
