--- a/lib/NEWS
+++ b/lib/NEWS
@@ -13,6 +13,10 @@ This was accidentally forgotten in the last release.
 ** libgsasl: Fix crash in SCRAM-SHA-1 client when the application provides
 ** a value for GSASL_SCRAM_SALTED_PASSWORD.
 
+** libgsasl: Fix detection of libgcrypt during builds.
+Before libgcrypt was not detected and used by default unless you
+supplied --with-libgcrypt.
+
 ** i18n: Added Finnish translation.
 Thanks to Jorma Karvonen <karvonen.jorma@gmail.com>.
 
