--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 1.3.90 (unreleased) [experimental]
+* Version 1.3.90 (released 2009-11-06) [experimental]
 
 ** tests/crypto: Also test newly added SHA-1 interfaces.
 
