--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.3.90 (unreleased) [experimental]
+* Version 1.3.90 (released 2009-11-06) [experimental]
 
 ** libgsasl: Properly increment libtool version to reflect newly added ABIs.
 This was accidentally forgotten in the last release.
