--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,18 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 1.4.0 (unreleased) [stable]
 
+** No changes since 1.3.91 release candidate.
+The release numbering scheme has changed compared to the last stable
+release.  In the future we will use version numbers X.Y.Z with even Y
+to indicate stable releases and odd Y to indicate experimental
+releases.  Z is incremented by one for every release on a particular
+branch.  For example, the next stable release will either be 1.4.1 or
+1.6.0 and the next experimental release will be 1.5.0.  The intention
+is that the stable branches can be used for security bug fixes if/when
+there is a need.  Other changes or new features will (typically) not
+be back-ported to a stable branch but instead will have to wait for
+the next stable branch to be released.
+
 * Version 1.3.91 (released 2009-11-06) [experimental]
 
 ** doc: Fix doc/cyclo/ output.
