--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 1.4.0 (unreleased) [stable]
 
+** No changes since 1.3.91 release candidate.
+
 ** API and ABI modifications.
 No changes since last version.
 
