--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,11 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
 See the end for copying conditions.
 
+* Version 1.5.0 (unreleased) [experimental]
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 1.4.0 (released 2009-11-17) [stable]
 
 ** No changes since 1.3.91 release candidate.
