--- a/lib/NEWS
+++ b/lib/NEWS
@@ -1,8 +1,8 @@
 GNU SASL LIBRARY NEWS -- History of user-visible changes.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010 Simon Josefsson
 See the end for copying conditions.
 
-* Version 1.5.0 (unreleased) [experimental]
+* Version 1.4.1 (unreleased) [stable]
 
 ** API and ABI modifications.
 No changes since last version.
